<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PlayGround Score Counter</string>

    <!--Home Team-->
    <string name="home">Home</string>

    <!--Away Team-->
    <string name="away">Away</string>

    <!--Home Score-->
    <string name="home_Score">0</string>

    <!--Away Score-->
    <string name="away_Score">0</string>

    <!--Button 3 points Home-->
    <string name="btn3_home">+3</string>

    <!--Button 2 points Home-->
    <string name="btn2_home">+2</string>

    <!--Button 1 point Home-->
    <string name="btn1_home">+1</string>

    <!--Button 3 points Away-->
    <string name="btn3_away">+3</string>

    <!--Button 2 points Away-->
    <string name="btn2_away">+2</string>

    <!--Button 1 point Away-->
    <string name="btn1_away">+1</string>

    <!--Current Quarter-->
    <string name="current_quarter">Qrt: N/A</string>

    <!--Quarter1-->
    <string name="q1">Q1</string>

    <!--Quarter2-->
    <string name="q2">Q2</string>

    <!--Quarter3-->
    <string name="q3">Q3</string>

    <!--Quarter4-->
    <string name="q4">Q4</string>

    <!--OverTime-->
    <string name="ot">OT</string>

    <!--New Game-->
    <string name="reset">New Game</string>
</resources>
